# Loft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
SDK/: readme.txt
src/: assets.cc  assets.hh  bsp.hh  color.cc  color.hh  components.cc  components.hh  def.hh  events.cc  events.hh  gl.cc  gl.hh  global.cc  global.hh  input.cc  input.hh  loft.cc  loft.hh  main.cc  object.cc  object.hh  postStack.cc  postStack.hh  renderer.cc  renderer.hh  util.cc  util.hh  world.cc  world.hh
src/api/assets/: asa.cc  asa.hh  audio.cc  audio.hh  camera.cc  camera.hh  models.cc  models.hh  pngw.cc  pngw.hh
src/api/render/: atlas.cc  atlas.hh  framebuffer.cc  framebuffer.hh  mesh.cc  mesh.hh  renderList.hh  renderPass.hh  shader.cc  shader.hh  texture.cc  texture.hh
to_bin/: engine.asa
